Fixed bug that inaccurately placed the starting space of the grid selector